--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ svg {
 }
 
 .toolbar { 
-  margin-top: 1em;
   padding: 0 0 0 80px;
   font: 14px sans-serif;
 }
@@ -56,7 +55,7 @@ line {
   stroke: #fff;
 }
 
-text.row-label, text.col-label {
+text.label {
   fill: #ccc;
 }
 
@@ -110,14 +109,20 @@ text.axis-label {
 
 /**** select2 customization ****/
 
+#filter-cont select.select2 {  /* helps prevent flash of unstyled content */
+  visibility: hidden;
+  height: 36px;
+  display: inline-block;
+  vertical-align: middle;
+}
 #filter-cont .select2-container {
   width: 500px !important;
   line-height: 1.5em;
-  font-weight: normal;
 }
 #filter-cont input { 
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding: 3px 0;
+  line-height: normal;
 }
 .select2-results {
   font-size: 14px;
@@ -185,10 +190,6 @@ text.axis-label {
   border-bottom: 1px solid white;
 }
 
-.link-info th.dist {
-  text-align: center;
-}
-
 .link-info td.same {
   text-align: center;
   font-weight: bold;
@@ -213,7 +214,7 @@ text.axis-label {
   border-top: 1px solid #555;
 }
 
-.d3-tip .row-label {
+.d3-tip .label {
   text-align: right;
   opacity: 0.5;
 }
