--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,7 @@ text.axis-label {
   z-index: 0;
   width: 100%;
   box-shadow: inset 0 6px 10px rgba(0, 0, 0, 0.7);
+  box-sizing: content-box;
 }
 #epi-heatmap > .cont {
   background: no-repeat;
