affix color scale to top left

--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,7 @@ text.axis-label {
 .fixed #color-scale {
   position: fixed;
   top: 0;
+  left: 80px;
 }
 .fixed #dendro {
   margin-left: 100px;
