--- a/css/style.css
+++ b/css/style.css
@@ -486,17 +486,26 @@ text.axis-label {
   margin-bottom: 0.5em;
 }
 
+.link-info th, .link-info td {
+  padding: 0.3em 0.5em;
+}
+.link-info .separator {
+  border-bottom: 1px solid white;
+}
+.link-info .separator td, .link-info .separator th {
+  padding: 0 0.5em 0.5em;
+}
+.link-info .separator+tr td, .link-info .separator+tr th {
+  padding-top: 0.5em;
+}
+.link-info tr:last-child td {
+  padding-bottom: 0.5em;
+}
+
 .enc-info {
   border-bottom: none;
 }
 
-.link-info th, .link-info td {
-  padding: 0.3em 0.5em;
-}
-
-.link-info th {
-  border-bottom: 1px solid white;
-}
 .link-info th.dist {
   text-align: center;
 }
@@ -511,7 +520,7 @@ text.axis-label {
   font-weight: bold;
 }
 
-.link-info td.same::before {
+.link-info td.same.dashes::before {
   display: inline-block;
   height: 0.3em;
   width: 40px;
@@ -520,7 +529,7 @@ text.axis-label {
   align: baseline;
   border-top: 1px solid #555;
 }
-.link-info td.same::after {
+.link-info td.same.dashes::after {
   display: inline-block;
   height: 0.3em;
   width: 40px;
@@ -528,6 +537,11 @@ text.axis-label {
   margin-left: 0.5em;
   align: baseline;
   border-top: 1px solid #555;
+}
+
+.cluster-color {
+  font-size: 0.9em;
+  padding-left: 1.1em;
 }
 
 .d3-tip .label {
